--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -17,9 +17,9 @@
                     <form action="#" th:action="@{/adduser}" th:object="${user}" method="post">
                         <div class="row">
                             <div class="form-group col-md-6">
-                                <label for="name" class="col-form-label">Name</label>
-                                <input type="text" th:field="*{name}" class="form-control" id="name" placeholder="Name">
-                                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></span>
+                                <label for="login" class="col-form-label">Login</label>
+                                <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login">
+                                <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" class="text-danger"></span>
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="email" class="col-form-label">Email</label>
