--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
                         <table class="table table-striped table-responsive-md">
                             <thead>
                                 <tr>
-                                    <th>Name</th>
+                                    <th>Login</th>
                                     <th>Email</th>
                                     <th>Edit</th>
                                     <th>Delete</th>
@@ -27,7 +27,7 @@
                             </thead>
                             <tbody>
                                 <tr th:each="user : ${users}">
-                                    <td th:text="${user.name}"></td>
+                                    <td th:text="${user.login}"></td>
                                     <td th:text="${user.email}"></td>
                                     <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-edit ml-2"></i></a></td>
                                     <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary"><i class="fas fa-user-times ml-2"></i></a></td>
