--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -11,30 +11,42 @@
     </head>
     <body>
         <div class="container my-5">
-            <h2 class="mb-5">New User</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <form action="#" th:action="@{/adduser}" th:object="${user}" method="post">
-                        <div class="row">
-                            <div class="form-group col-md-6">
-                                <label for="login" class="col-form-label">Login</label>
-                                <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="Login">
-                                <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" class="text-danger"></span>
-                            </div>
-                            <div class="form-group col-md-6">
-                                <label for="email" class="col-form-label">Email</label>
-                                <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="Email">
-                                <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></span>
-                            </div>
+            <h2 class="mb-5">Add new User</h2>
+                <form action="#" th:action="@{/adduser}" th:object="${user}" method="post">
+                    <div class="row">
+                        <div class="form-group col-md-2">
+                            <label for="login" class="col-form-label">Login</label>
+                            <input type="text" th:field="*{login}" class="form-control" id="login" placeholder="login">
+                            <span th:if="${#fields.hasErrors('login')}" th:errors="*{login}" class="text-danger"></span>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6 mt-5">
-                                <input type="submit" class="btn btn-primary" value="Add User">
-                            </div>
-                        </div>    
-                    </form>
-                </div>
+                        <div class="form-group col-md-2">
+                            <label for="pass" class="col-form-label">Password</label>
+                            <input type="text" th:field="*{password}" class="form-control" id="pass" placeholder="password">
+                            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></span>
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label for="god" class="col-form-label">Admin</label>
+                            <input type="text" th:field="*{god}" class="form-control" id="god" placeholder="0 or 1">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label for="exp" class="col-form-label">Experience</label>
+                            <input type="text" th:field="*{exp}" class="form-control" id="exp" placeholder="1 to 94000000">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label for="clan" class="col-form-label">Clan</label>
+                            <input type="text" th:field="*{clan}" class="form-control" id="clan" placeholder="police/admins">
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label for="email" class="col-form-label">Email</label>
+                            <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="email">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 mt-5">
+                            <input type="submit" class="btn btn-primary" value="Add User">
+                        </div>
+                    </div>
+                </form>
             </div>
-        </div>
     </body>
 </html>
