--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -25,8 +25,11 @@
                             <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
-                            <label for="god" class="col-form-label">Admin</label>
-                            <input type="text" th:field="*{god}" class="form-control" id="god" placeholder="0 or 1">
+                            <label class="col-form-label" for="god">Privileges</label>
+                            <select th:field="*{god}" class="form-control" id="god">
+                                <option th:value="1">god</option>
+                                <option th:value="0">standard</option>
+                            </select>
                             <span th:if="${#fields.hasErrors('god')}" th:errors="*{god}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
@@ -35,88 +38,112 @@
                             <span th:if="${#fields.hasErrors('clan')}" th:errors="*{clan}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
-                            <label for="sex" class="col-form-label">Sex</label>
-                            <input type="text" th:field="*{man}" class="form-control" id="sex" placeholder="0 female | 1 male">
+                            <label class="col-form-label" for="sex">Sex</label>
+                            <select th:field="*{man}" class="form-control" id="sex">
+                                <option th:value="1">male</option>
+                                <option th:value="0">female</option>
+                            </select>
                             <span th:if="${#fields.hasErrors('man')}" th:errors="*{man}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="email" class="col-form-label">Email</label>
-                            <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="email">
+                            <input type="email" th:field="*{email}" class="form-control" id="email" placeholder="email">
                             <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="exp" class="col-form-label">Experience</label>
-                            <input type="text" th:field="*{exp}" class="form-control" id="exp" placeholder="from 1 to 94000000">
+                            <input type="number" min="1" max="94000000" th:field="*{exp}" class="form-control" id="exp" placeholder="from 1 to 94000000">
                             <span th:if="${#fields.hasErrors('exp')}" th:errors="*{exp}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="hp" class="col-form-label">HP</label>
-                            <input type="text" th:field="*{hp}" class="form-control" id="hp" placeholder="any positive int">
+                            <input type="number" min="1" th:field="*{hp}" class="form-control" id="hp" placeholder="any positive int">
                             <span th:if="${#fields.hasErrors('hp')}" th:errors="*{hp}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
-                            <label for="prof" class="col-form-label">Profession</label>
-                            <input type="text" th:field="*{pro}" class="form-control" id="prof" placeholder="from 1 to 16,26,27,28,30">
+                            <label class="col-form-label" for="prof">Profession</label>
+                            <select th:field="*{pro}" class="form-control" id="prof">
+                                <option th:value="1">corsair</option>
+                                <option th:value="2">stalker</option>
+                                <option th:value="3">prospector</option>
+                                <option th:value="4">engineer</option>
+                                <option th:value="5">mercenary</option>
+                                <option th:value="6">merchant</option>
+                                <option th:value="7">police(patrol)</option>
+                                <option th:value="8">police(stormtrooper)</option>
+                                <option th:value="9">police(specialist)</option>
+                                <option th:value="10">journalist</option>
+                                <option th:value="11">official</option>
+                                <option th:value="12">psyonic</option>
+                                <option th:value="13">prisoner</option>
+                                <option th:value="14">psy-kinetic</option>
+                                <option th:value="15">psy-medium</option>
+                                <option th:value="16">psy-leader</option>
+                                <option th:value="26">cargo robot</option>
+                                <option th:value="27">landing robot</option>
+                                <option th:value="28">combat robot</option>
+                                <option th:value="30">dealer</option>
+                            </select>
                             <span th:if="${#fields.hasErrors('pro')}" th:errors="*{pro}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="propwr" class="col-form-label">Profession power</label>
-                            <input type="text" th:field="*{propwr}" class="form-control" id="propwr" placeholder="from 0.0 to 1">
+                            <input type="number" min="0" max="1" step="0.1" th:field="*{propwr}" class="form-control" id="propwr" placeholder="from 0.0 to 1">
                             <span th:if="${#fields.hasErrors('propwr')}" th:errors="*{propwr}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="rankpts" class="col-form-label">Rank points</label>
-                            <input type="text" th:field="*{rankPoints}" class="form-control" id="rankpts" placeholder="from 0 to 10000">
+                            <input type="number" min="0" max="10000" th:field="*{rankPoints}" class="form-control" id="rankpts" placeholder="from 0 to 10000">
                             <span th:if="${#fields.hasErrors('rankPoints')}" th:errors="*{rankPoints}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="psy" class="col-form-label">Psy power</label>
-                            <input type="text" th:field="*{psy}" class="form-control" id="psy" placeholder="any int">
+                            <input type="number" th:field="*{psy}" class="form-control" id="psy" placeholder="any int">
                             <span th:if="${#fields.hasErrors('psy')}" th:errors="*{psy}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="cop" class="col-form-label">Copper money</label>
-                            <input type="text" th:field="*{cup_0}" class="form-control" id="cop" placeholder="any positive int">
+                            <input type="number" min="0" th:field="*{cup_0}" class="form-control" id="cop" placeholder="any positive int">
                             <span th:if="${#fields.hasErrors('cup_0')}" th:errors="*{cup_0}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="silv" class="col-form-label">Silver money</label>
-                            <input type="text" th:field="*{silv}" class="form-control" id="silv" placeholder="any positive int">
+                            <input type="number" min="0" th:field="*{silv}" class="form-control" id="silv" placeholder="any positive int">
                             <span th:if="${#fields.hasErrors('silv')}" th:errors="*{silv}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="gold" class="col-form-label">Gold money</label>
-                            <input type="text" th:field="*{silv}" class="form-control" id="gold" placeholder="any positive int">
+                            <input type="number" min="0" th:field="*{silv}" class="form-control" id="gold" placeholder="any positive int">
                             <span th:if="${#fields.hasErrors('gold')}" th:errors="*{gold}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="perk" class="col-form-label">Perk money</label>
-                            <input type="text" th:field="*{p78money}" class="form-control" id="perk" placeholder="any positive int">
+                            <input type="number" min="0" th:field="*{p78money}" class="form-control" id="perk" placeholder="any positive int">
                             <span th:if="${#fields.hasErrors('p78money')}" th:errors="*{p78money}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="str" class="col-form-label">Strength</label>
-                            <input type="text" th:field="*{str}" class="form-control" id="str" placeholder="any int">
+                            <input type="number" th:field="*{str}" class="form-control" id="str" placeholder="any int">
                             <span th:if="${#fields.hasErrors('str')}" th:errors="*{str}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="dex" class="col-form-label">Dexterity</label>
-                            <input type="text" th:field="*{dex}" class="form-control" id="dex" placeholder="any int">
+                            <input type="number" th:field="*{dex}" class="form-control" id="dex" placeholder="any int">
                             <span th:if="${#fields.hasErrors('dex')}" th:errors="*{dex}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="pow" class="col-form-label">Power</label>
-                            <input type="text" th:field="*{pow}" class="form-control" id="pow" placeholder="any int">
+                            <input type="number" th:field="*{pow}" class="form-control" id="pow" placeholder="any int">
                             <span th:if="${#fields.hasErrors('pow')}" th:errors="*{pow}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="acc" class="col-form-label">Accuracy</label>
-                            <input type="text" th:field="*{acc}" class="form-control" id="acc" placeholder="any int">
+                            <input type="number" th:field="*{acc}" class="form-control" id="acc" placeholder="any int">
                             <span th:if="${#fields.hasErrors('acc')}" th:errors="*{acc}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="int" class="col-form-label">Intellect</label>
-                            <input type="text" th:field="*{intel}" class="form-control" id="int" placeholder="any int">
+                            <input type="number" th:field="*{intel}" class="form-control" id="int" placeholder="any int">
                             <span th:if="${#fields.hasErrors('intel')}" th:errors="*{intel}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
@@ -126,17 +153,20 @@
                         </div>
                         <div class="form-group col-md-3">
                             <label for="chatblock" class="col-form-label">Chat block until</label>
-                            <input type="text" th:field="*{chatblock}" class="form-control" id="chatblock" placeholder="Time in msec">
+                            <input type="number" th:field="*{chatblock}" class="form-control" id="chatblock" placeholder="Time in msec">
                             <span th:if="${#fields.hasErrors('chatblock')}" th:errors="*{chatblock}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
                             <label for="forumblock" class="col-form-label">Forum block until</label>
-                            <input type="text" th:field="*{forumblock}" class="form-control" id="forumblock" placeholder="Time in msec">
+                            <input type="number" th:field="*{forumblock}" class="form-control" id="forumblock" placeholder="Time in msec">
                             <span th:if="${#fields.hasErrors('forumblock')}" th:errors="*{forumblock}" class="text-danger"></span>
                         </div>
                         <div class="form-group col-md-3">
-                            <label for="bot" class="col-form-label">Bot account</label>
-                            <input type="text" th:field="*{bot}" class="form-control" id="bot" placeholder="0 or 1">
+                            <label class="col-form-label" for="bot">Account type</label>
+                            <select th:field="*{bot}" class="form-control" id="bot">
+                                <option th:value="0" >standard account</option>
+                                <option th:value="1">bot account</option>
+                            </select>
                             <span th:if="${#fields.hasErrors('bot')}" th:errors="*{bot}" class="text-danger"></span>
                         </div>
                     </div>
