--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -164,7 +164,7 @@
                         <div class="form-group col-md-3">
                             <label class="col-form-label" for="bot">Account type</label>
                             <select th:field="*{bot}" class="form-control" id="bot">
-                                <option th:value="0" >standard acc</option>
+                                <option th:value="0" >casual acc</option>
                                 <option th:value="1">bot acc</option>
                             </select>
                             <span th:if="${#fields.hasErrors('bot')}" th:errors="*{bot}" class="text-danger"></span>
