beautify pages a bit

--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -172,7 +172,8 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 mt-5">
-                            <input type="submit" class="btn btn-primary" value="Update User">
+                            <button type="submit" class="btn btn-primary">Done<i class="fas fa-user-edit ml-2"></i></button>
+                            <a href="/index" class="btn btn-primary">Discard</a>
                         </div>
                     </div>
                 </form>
