--- a/src/main/resources/templates/add-item.html
+++ b/src/main/resources/templates/add-item.html
@@ -41,7 +41,7 @@
         <div class="container my-5">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="my-5">Items</h2>
+                    <h2 class="my-5">Add items</h2>
                 </div>
                 <div class="col-md-6">
                     <form method="post" th:object="${itemTemplateWrapper}" th:action="@{/edit/{id}/items(id=${userId})}" action="#">
