--- a/src/main/resources/templates/add-item.html
+++ b/src/main/resources/templates/add-item.html
@@ -5,8 +5,11 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/shards.min.css">
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/css/bootstrap-select.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" >
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
+
+
         <title>Add itemTemplate</title>
     </head>
 
@@ -15,7 +18,7 @@
             <div class="col-md-6">
                 <h2 th:case="0">User have no items!</h2>
                 <div th:case="*">
-                    <h2 class="my-5">Items</h2>
+                    <h2 class="my-5">User items</h2>
                     <table class="table table-striped table-responsive-md">
                         <thead>
                         <tr>
@@ -41,25 +44,25 @@
         <div class="container my-5">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="my-5">Add items</h2>
+                    <h2 class="my-5">Choose item to add</h2>
                 </div>
-                <div class="col-md-6">
-                    <form method="post" th:object="${itemTemplateWrapper}" th:action="@{/edit/{id}/items(id=${userId})}" action="#">
-                        <label for="item_template" class="col-form-label">Select itemTemplate to add</label>
+                <form action="#" method="post" th:object="${itemTemplateWrapper}" th:action="@{/edit/{id}/items(id=${userId})}">
+                    <div class="form-group">
+                        <label for="item_template" class="col-form-label">Select from available</label>
                         <select th:field="${itemTemplateWrapper.item}" id="item_template" class="form-control selectpicker" data-live-search="true">
                             <option th:each="template : ${items}"
                                     th:value="${template.id}"
                                     th:text="${template}">
                             </option>
                         </select>
-                        <button type="submit" class="btn btn-primary">Add</button>
-                    </form>
-                </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Add</button>
+                </form>
             </div>
         </div>
     </body>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/js/bootstrap-select.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js"></script>
 </html>
