--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -173,7 +173,7 @@
                     <div class="row">
                         <div class="col-md-6 mt-5">
                             <button type="submit" class="btn btn-primary">Add<i class="fas fa-user-plus ml-2"></i></button>
-                            <a href="/index" class="btn btn-primary">Back</a>
+                            <a href="/users" class="btn btn-primary">Back</a>
                         </div>
                     </div>
                 </form>
