--- a/src/main/resources/templates/update-user.html
+++ b/src/main/resources/templates/update-user.html
@@ -173,7 +173,7 @@
                     <div class="row">
                         <div class="col-md-6 mt-5">
                             <button type="submit" class="btn btn-primary">Done<i class="fas fa-user-edit ml-2"></i></button>
-                            <a href="/index" class="btn btn-primary">Discard</a>
+                            <a href="/users" class="btn btn-primary">Discard</a>
                         </div>
                     </div>
                 </form>
