--- a/src/main/resources/templates/items.html
+++ b/src/main/resources/templates/items.html
@@ -56,7 +56,8 @@
                             </option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-primary">Add</button>
+                    <button type="submit" class="btn btn-primary">Add item</button>
+                    <a href="/users" class="btn btn-primary">Back to main</a>
                 </form>
             </div>
         </div>
