--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -17,7 +17,7 @@
             </div>
         </nav>
         <div class="container my-5">
-            <table class="table table-striped table-responsive-md">
+            <table class="table table-hover table-striped table-responsive-md">
                 <thead>
                     <tr>
                         <th>ID</th>
@@ -35,6 +35,9 @@
                         <td><a th:href="@{/edit/{id}/items(id=${user.id})}" class="btn btn-primary">Manage Items<i class="fas fa-list ml-2"></i></a></td>
                         <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary">Remove<i class="fas fa-user-times ml-2"></i></a></td>
                     </tr>
+                    <tr>
+                        <td colspan="5"><a th:href="${'/adduser'}" class="nav-link">Add new user<i class="fas fa-user-plus ml-2"></i></a></td>
+                    </tr>
                 </tbody>
             </table>
             <nav aria-label="Pagination" th:if="${totalPages > 0}">
@@ -50,7 +53,6 @@
                     </th:block>
                 </ul>
             </nav>
-            <p class="my-5"><a th:href="${'/adduser'}" class="btn btn-primary">Add<i class="fas fa-user-plus ml-2"></i></a></p>
         </div>
     </body>
 </html>
