link "edit user" func to user's login in table

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -22,7 +22,6 @@
                     <tr>
                         <th>ID</th>
                         <th>Login</th>
-                        <th>Params</th>
                         <th>Items</th>
                         <th>Delete</th>
                     </tr>
@@ -30,8 +29,7 @@
                 <tbody>
                     <tr th:each="user : ${users}">
                         <td th:text="${user.id}"></td>
-                        <td th:text="${user.login}"></td>
-                        <td><a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-primary">Edit<i class="fas fa-user-edit ml-2"></i></a></td>
+                        <td><a th:href="@{/edit/{id}(id=${user.id})}" th:text="${user.login}" class="nav-link"></a></td>
                         <td><a th:href="@{/edit/{id}/items(id=${user.id})}" class="btn btn-primary">Manage Items<i class="fas fa-list ml-2"></i></a></td>
                         <td><a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-primary">Remove<i class="fas fa-user-times ml-2"></i></a></td>
                     </tr>
