--- a/src/main/resources/templates/update-item.html
+++ b/src/main/resources/templates/update-item.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 mt-5">
-                        <button type="submit" class="btn btn-primary">Done<i class="fas fa-user-edit ml-2"></i></button>
+                        <button type="submit" class="btn btn-success">Done<i class="fas fa-user-edit ml-2"></i></button>
                     </div>
                 </div>
             </form>
